new chapter title + updates

--- a/chapter.tex
+++ b/chapter.tex
@@ -152,11 +152,18 @@ plot. As we discuss in Section 3 the importance of these cannot be
 understated and are the difference between a stunning graphic and an
 impenetrable mess.
 
- The impact of the graphic was to inspire the R community to produce
-more ambitious graphics; a process fuelled by the increased demand for
-data visualisation and the development of sophisticated packages, such
-as ggplot2, that augment the basic plot functions of R. It is now the
-case that R has become a key analysis and visualisation tool used by the
+\begin{figure}[htbp]
+\centering
+\includegraphics{figure/butler_facebook_2.jpg}
+\caption{Iconic plot of Facebook freindship networks worldwide, by Paul
+Butler}
+\end{figure}
+
+The impact of the graphic was to inspire the R community to produce more
+ambitious graphics; a process fuelled by the increased demand for data
+visualisation and the development of sophisticated packages, such as
+ggplot2, that augment the basic plot functions of R. It is now the case
+that R has become a key analysis and visualisation tool used by the
 likes of Twitter, the New York Times and Facebook and thousands of
 consultants, design houses and journalists. It is not longer the
 preserve of academic research, with many graduate jobs listing R as a
